<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="CraneSimulation" Id="{c255987f-7a58-4573-9ac9-545c12e8d4a5}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM CraneSimulation
VAR
	fTime : LREAL; 	
	fPositionAutoMode : LREAL; 
	fInitialPosition : LREAL; 
	fInitialVelocity : LREAL;  
	bPistonMaxNewValue : BOOL;
	//stpCylinderPiston : ST_pCylinderPiston;

	fPressureEng : REAL;
	fFlowEng : REAL;
	fPressureBar : LREAL := 60;
	fFlowLmin : LREAL := 20;
	fBoomAngleRad : LREAL;
	fBoomAnimation : LREAL;
	
	fbPistonEndStop : FB_Softstop; 
	
	//fbCraneModeVisualization : FB_CraneModeVisualization;
	//fbCraneModeControlBox : FB_CraneModeControlBox;
	//fbCraneMode : I_HMI := fbCraneModeVisualization;
	fbModeSelector : FB_ModeSelector;
	fbStatus : FB_Status;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF HMI.bStartSimulation AND HMI.bAuto  THEN
	fTime := fTime + Parameters.stParam.fCyclicTime;
ELSE
	fTime := 0; 	
END_IF

IF fTime > 0 AND HMI.bAuto  THEN 
	HMI.bSimulationRunning := TRUE;
ELSE
	HMI.bSimulationRunning := FALSE;
END_IF

fPositionAutoMode := HMI.fCylinderVelocityReference * 1/2*(fTime*fTime) + fInitialVelocity * fTime + fInitialPosition;


// Mode Selector
fbModeSelector(bControlBox := FALSE);

fbPistonEndStop(
	fInputValue := HMI.fCylinderPosition,
	fNegDirLimit := Parameters.stParam.stPistonRange.fPistonPosMin,
	fPosDirLimit := Parameters.stParam.stPistonRange.fPistonPosMax,
	bEndStopNegDir => Outputs.bPistonLowerEndStop,
	bEndStopPosDir => Outputs.bPistonUpperEndStop,
	sEndStopMessage => HMI.sPistonEndStopMessages,
	fOutputValue => HMI.fCylinderPositionRestricted
);

	
// Status
fbStatus(
bPowerOn := HMI.bEnableSimulation,
bFault := FALSE,
bStart:= HMI.bStartSimulation,
bStop := FALSE,
bRunning := HMI.bSimulationRunning,
eStatus => HMI.eStatus
);


fPressureEng := LREAL_TO_REAL(F_BarToEng(fBar := fPressureBar));
fFlowEng := LREAL_TO_REAL(F_LminToEng(fLmin := fFlowLmin));

F_UpdateParametersByReference( 
	bSetNewValue := bPistonMaxNewValue,
	fMaxPistonStroke := HMI.fMaxPistonPosition,
	paramCylinderPiston := Parameters.stParam.stPistonRange
);

// Piston Animation
HMI.stPistonAnimation.pt1_y := LREAL_TO_INT(HMI.fCylinderPositionRestricted * Parameters.stParam.stAnimationScaling.fPistonScale);
// Boom Animation
fBoomAngleRad := F_PistonDisplacementToBoomAngle(xCyl := HMI.fCylinderPositionRestricted);
fBoomAnimation := F_BoomAnimation(
	fScale := Parameters.stParam.stAnimationScaling.fBoomScale,
	fBoomAngle := fBoomAngleRad,
	fBoomLength := Parameters.stParam.stCraneKinematics.fBoomLength,
	fBoomTipX => HMI.stBoomAnimation.pt1_x,
	fBoomTipY => HMI.stBoomAnimation.pt1_y
);

HMI.fSimulationTime := fTime; 
Outputs.fCylinderVelocity := HMI.fCylinderVelocityReference;

HMI.fBoomAngleDeg := F_RadToDeg(fRad := fBoomAngleRad);
]]></ST>
    </Implementation>
    <LineIds Name="CraneSimulation">
      <LineId Id="277" Count="12" />
      <LineId Id="584" Count="1" />
      <LineId Id="588" Count="0" />
      <LineId Id="617" Count="0" />
      <LineId Id="465" Count="2" />
      <LineId Id="471" Count="4" />
      <LineId Id="469" Count="0" />
      <LineId Id="468" Count="0" />
      <LineId Id="464" Count="0" />
      <LineId Id="312" Count="1" />
      <LineId Id="651" Count="0" />
      <LineId Id="655" Count="0" />
      <LineId Id="658" Count="4" />
      <LineId Id="654" Count="0" />
      <LineId Id="327" Count="0" />
      <LineId Id="348" Count="1" />
      <LineId Id="360" Count="0" />
      <LineId Id="350" Count="3" />
      <LineId Id="455" Count="0" />
      <LineId Id="355" Count="0" />
      <LineId Id="423" Count="0" />
      <LineId Id="421" Count="1" />
      <LineId Id="424" Count="0" />
      <LineId Id="414" Count="0" />
      <LineId Id="425" Count="0" />
      <LineId Id="433" Count="0" />
      <LineId Id="428" Count="1" />
      <LineId Id="431" Count="1" />
      <LineId Id="427" Count="0" />
      <LineId Id="408" Count="3" />
      <LineId Id="382" Count="0" />
      <LineId Id="381" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>